[package]
name = "moonish"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[features]
console = []

[dependencies]
tray-icon = "0.5.2"
auto-launch = "0.4.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility"
]

[build-dependencies]
winres = "0.1.12"
